--- a/src/education.html
+++ b/src/education.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Nikita Kudenikov" />
+    <meta name="yandex-verification" content="bf468cbcdc3517d8" />
+    <meta name="google-site-verification" content="oGB3xVTxe-hT_fjYtOh9FJ0GHmkGx_QowiVF_bY_X_s" />
+    <meta name="discription" content="Консультация психолога" />
     <title>Психолог Ирина Дан</title>
   </head>
   <body class="page">
@@ -24,7 +27,7 @@
                 >
               </li>
               <li>
-                <a class="nav__link header__link" href="#info"
+                <a class="nav__link header__link" href="./index.html#info"
                   >Работа<br />
                   психолога</a
                 >
@@ -36,17 +39,23 @@
                 >
               </li>
               <li>
-                <a class="nav__link header__link" href="#situations"
+                <a class="nav__link header__link" href="./index.html#situations"
                   >Психологическая<br />
                   помощь</a
                 >
               </li>
               <li>
-                <a class="nav__link header__link" href="#consultation"
+                <a class="nav__link header__link" href="./index.html#consultation"
                   >Психологические<br />
                   консультации</a
                 >
               </li>
+              <li>
+                  <a class="nav__link header__link" href="./index.html#consultation__check-list"
+                    >Чек-листы<br />
+                    и тесты</a
+                  >
+                </li>
               <li>
                 <a class="nav__link header__link" href="#footer"
                   >Мои<br />
@@ -412,11 +421,11 @@
                 target="_blank"
                 ><img src="./images/YouTube_32px.png" alt="YouTube"
               /></a>
-              <a
+               <a
                 class="footer__icon"
-                href="https://www.b17.ru/psy_academician/"
+                href="https://www.b17.ru/psy_academician/?prt=682304"
                 target="_blank"
-                ><img src="./images/b17_32px.png" alt="b17"
+                ><img class="footer__icon_size" src="https://www.b17.ru/img/b17_100x100_b.png" alt="b17"
               /></a>
             </nav>
           </div>
