--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Nikita Kudenikov" />
+    <meta name="yandex-verification" content="bf468cbcdc3517d8" />
+    <meta
+      name="google-site-verification"
+      content="oGB3xVTxe-hT_fjYtOh9FJ0GHmkGx_QowiVF_bY_X_s"
+    />
+    <meta name="discription" content="Консультация психолога" />
     <title>Психолог Ирина Дан</title>
   </head>
   <body class="page">
@@ -46,6 +52,14 @@
                   <a class="nav__link header__link" href="#consultation"
                     >Психологические<br />
                     консультации</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="nav__link header__link"
+                    href="#consultation__check-list"
+                    >Чек-листы<br />
+                    и тесты</a
                   >
                 </li>
                 <li>
@@ -337,6 +351,81 @@
               >Контракт Психолога и Клиента</a
             >
           </div>
+          <h2
+            class="consultation__title consultation__title_margin"
+            id="consultation__check-list"
+          >
+            Чек-листы и тесты*
+          </h2>
+          <div class="consultation__table">
+            <div class="consultation__table-item">
+              <div class="consultation__info block">
+                <p class="consultation__table-title-check-list">
+                  КАК ИЗБАВИТЬСЯ ОТ ДЕПРЕССИИ
+                </p>
+                <img
+                  class="consultation__info-img hover"
+                  src="./images/info-svgrepo-com.png"
+                  alt="Информация"
+                />
+                <p class="hidden">
+                  Надвигающуюся хандру, тоску или депрессивное состояние
+                  (немедицинской этиологии) можно преодолеть только конкретными
+                  действиями. <br />
+                  Если у Вас медицинская (клиническая) депрессия – вы уже
+                  несколько месяцев: не встаёте с кровати, у вас
+                  непрекращающаяся беспричинная апатия, не хочется мыться,
+                  чистить зубы, выходить из дома и т.д - ВАМ НЕОБХОДИМА ПОМОЩЬ
+                  МЕДИЦИНСКОГО ПСИХОТЕРАПЕВТА! <br />
+                  Если тоскливое состояние начало накатывать относительно
+                  недавно, случается время от времени, связана с какими-то
+                  событиями (расставание, неудача на работе, ссора с подругой,
+                  не достигнута цель и пр.) - то этот ЧЕК-ЛИСТ поможет вам
+                  выбраться из хандры. <br />
+                  Делаем это каждый день! <br />
+                  Не пропуская, не оправдываясь, не халтуря! <br />
+                  Можете начать в любое время дня и ночи. <br />
+                  Если начнете с утра, уже к вечеру почувствуете, что депрессия
+                  отступает!
+                </p>
+              </div>
+              <a
+                href="https://drive.google.com/file/d/1FH2brAg0To2KPNbwUkZYwIx5FcnK0gFP/view?usp=sharing"
+                target="_blank"
+                class="consultation__link consultation__link_margin"
+                >Чек-лист</a
+              >
+            </div>
+            <div class="consultation__table-item">
+              <p class="consultation__table-title-check-list">
+                СКРЫТЫЙ НАРЦИССИЗМ ПАРТНЕРА
+              </p>
+              <a
+                href="https://drive.google.com/file/d/1eshmPXF4f6q-UVC10H7S4lKAYojYY1wY/view?usp=sharing"
+                target="_blank"
+                class="consultation__link consultation__link_margin consultation__link-check-list"
+                >Тест</a
+              >
+            </div>
+            <div class="consultation__table-item">
+              <p class="consultation__table-title-check-list">
+                СКЛОННОСТЬ К СОЗАВИСИМОСТИ
+              </p>
+              <a
+                href="https://drive.google.com/file/d/1bUpL60-vRaw5nu2vpNKYHa4K_0gJmWyg/view?usp=sharing"
+                target="_blank"
+                class="consultation__link consultation__link_margin"
+                >Тест</a
+              >
+            </div>
+          </div>
+          <p class="consultation__copyright">
+            * Все материалы данного сайта являются объектами авторского права (в
+            том числе дизайн). Запрещается копирование, распространение (в том
+            числе путем копирования на другие сайты и ресурсы в Интернете) или
+            любое иное использование информации и объектов без предварительного
+            согласия правообладателя.
+          </p>
         </section>
       </main>
       <footer class="footer" id="footer">
@@ -414,9 +503,12 @@
               /></a>
               <a
                 class="footer__icon"
-                href="https://www.b17.ru/psy_academician/"
+                href="https://www.b17.ru/psy_academician/?prt=682304"
                 target="_blank"
-                ><img src="./images/b17_32px.png" alt="b17"
+                ><img
+                  class="footer__icon_size"
+                  src="https://www.b17.ru/img/b17_100x100_b.png"
+                  alt="b17"
               /></a>
             </nav>
           </div>
