--- a/src/index.html
+++ b/src/index.html
@@ -140,41 +140,9 @@
               allowfullscreen
             ></iframe>
           </div>
-          <div class="info__container-post">
-            <a href="https://www.instagram.com/p/CaZEjFLMyyR/" target="_blank">
-              <img
-                src="./images/Instagram__post1.png"
-                alt="Счастливые» семьи"
-                class="info__post"
-            /></a>
-            <a href="https://www.instagram.com/p/CUaRsaFsBGN/" target="_blank">
-              <img
-                src="./images/Instagram__post2.png"
-                alt="Родительские манипуляции"
-                class="info__post"
-            /></a>
-            <a href="https://www.instagram.com/p/CTG8aulMo27/" target="_blank">
-              <img
-                src="./images/Instagram__post3.png"
-                alt="Выход из созависимости"
-                class="info__post"
-            /></a>
-          </div>
           <nav class="info__nav">
-            <a
-              class="info__icon"
-              href="https://www.instagram.com/irdan_psy/"
-              target="_blank"
-              ><img src="./images/Instagram_64px.png" alt="Instagram"
-            /></a>
             <a class="info__icon" href="https://t.me/irdan_psy/" target="_blank"
               ><img src="./images/Telegram_64px.png" alt="Telegram"
-            /></a>
-            <a
-              class="info__icon"
-              href="https://www.facebook.com/psy.academician/"
-              target="_blank"
-              ><img src="./images/facebook_64px.png" alt="Facebook"
             /></a>
             <a
               class="info__icon"
@@ -337,9 +305,16 @@
               </p>
             </div>
           </div>
+
+          <div class="reviews">
+            <a href="./reviews.html" class="button-reg-reviews"
+              >Отзывы и результаты</a
+            >
+          </div>
+
           <div class="consultation__container-price-contract">
             <a
-              href="https://drive.google.com/file/d/1Kvx_rWz3zuhtiIELxSmK3nuHCIfUFWKR/view?usp=sharing"
+              href="https://drive.google.com/file/d/1PFp52rJkam2Hzb_0Za5tpZWPzFCaNnL5/view?usp=sharing"
               target="_blank"
               class="consultation__link consultation__link_margin"
               >Прайс на услуги</a
@@ -418,6 +393,17 @@
                 >Тест</a
               >
             </div>
+            <div class="consultation__table-item">
+              <p class="consultation__table-title-check-list">
+                СКРЫТЫЙ ПЕРФЕКИОНИЗМ
+              </p>
+              <a
+                href="https://drive.google.com/file/d/1VzTXPLMF9AAMGSw5qgG79SdzjxrqToKZ/view?usp=sharing"
+                target="_blank"
+                class="consultation__link consultation__link_margin"
+                >Тест</a
+              >
+            </div>
           </div>
           <p class="consultation__copyright">
             * Все материалы данного сайта являются объектами авторского права (в
@@ -473,21 +459,9 @@
             <nav class="footer__container-icon">
               <a
                 class="footer__icon"
-                href="https://www.instagram.com/irdan_psy/"
-                target="_blank"
-                ><img src="./images/Instagram_32px.png" alt="Instagram"
-              /></a>
-              <a
-                class="footer__icon"
                 href="https://www.linkedin.com/in/irdan-psy/"
                 target="_blank"
                 ><img src="./images/linkedin_32px.png" alt="Linkedin"
-              /></a>
-              <a
-                class="footer__icon"
-                href="https://www.facebook.com/psy.academician/"
-                target="_blank"
-                ><img src="./images/facebook_32px.png" alt="Facebook"
               /></a>
               <a
                 class="footer__icon"
@@ -514,7 +488,7 @@
           </div>
         </div>
         <p class="footer__copyright">
-          &copy; 2022 сайт сделан by_
+          &copy; 2023 сайт сделан by
           <a
             class="footer__copyright-link"
             href="https://t.me/kudnik"
