--- a/src/reviews.html
+++ b/src/reviews.html
@@ -94,264 +94,122 @@
       <main>
         <section class="education">
           <h2 class="education__title title education__education-title">
-            Образование и квалификация
+            Отзывы и результаты
           </h2>
           <div class="education__items">
             <div class="items1">
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education1.jpg"
-                  alt="Диплом № 1"
+                  src="./images/review1.jpg"
+                  alt="Отзыв 1"
                 />
-                <p class="education__diploms-subtitle">
-                  МГПУ (диплом), Квалификация: Преподаватель педагогики и
-                  психологии
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education2.jpg"
-                  alt="Диплом № 2"
+                  src="./images/review2.jpg"
+                  alt="Отзыв 2"
                 />
-                <p class="education__diploms-subtitle">
-                  РГГУ (диплом), Квалификация: Психология личности
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education3.jpg"
-                  alt="Диплом № 3"
+                  src="./images/review3.jpg"
+                  alt="Отзыв 3"
                 />
-                <p class="education__diploms-subtitle">
-                  НАДПО (повышение квалификации), Работа психолога в русле
-                  когнитивно-поведенческой терапии с клиентами с симптомами
-                  зависимости
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education4.jpg"
-                  alt="Диплом № 4"
+                  src="./images/review4.jpg"
+                  alt="Отзыв 4"
                 />
-                <p class="education__diploms-subtitle">
-                  НАДПО (повышение квалификации), Кризисные состояния и травмы:
-                  стратегии психологической помощи
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education5.jpg"
-                  alt="Диплом № 5"
+                  src="./images/review5.jpg"
+                  alt="Отзыв 5"
                 />
-                <p class="education__diploms-subtitle">
-                  МИОО (повышение квалификации), Система работы с кадрами и
-                  научно-методическое сопровождение УВП
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education6.jpg"
-                  alt="Диплом № 6"
+                  src="./images/review6.jpg"
+                  alt="Отзыв 6"
                 />
-                <p class="education__diploms-subtitle">
-                  МИОО (повышение квалификации), Психолого-педагогические основы
-                  воспитания детей
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education7.jpg"
-                  alt="Диплом № 7"
+                  src="./images/review7.jpg"
+                  alt="Отзыв 7"
                 />
-                <p class="education__diploms-subtitle">
-                  СУЦ (повышение квалификации), Психодиагностика: современные
-                  приемы и методы в условиях реализации ФГОС
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education8.jpg"
-                  alt="Диплом № 8"
+                  src="./images/review8.jpg"
+                  alt="Отзыв 8"
                 />
-                <p class="education__diploms-subtitle">
-                  ИПО (сертификация), Психология семьи
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education9.jpg"
-                  alt="Диплом № 9"
+                  src="./images/review10.jpg"
+                  alt="Отзыв 10"
                 />
-                <p class="education__diploms-subtitle">
-                  АКПП (сертификация), Терапия пустого усилия
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education10.jpg"
-                  alt="Диплом № 10"
+                  src="./images/review11.jpg"
+                  alt="Отзыв 11"
                 />
-                <p class="education__diploms-subtitle">
-                  ИКПК (сертификация), Участник научного пленума по
-                  консультативной психологии и неклинической психотерапии
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education11.jpg"
-                  alt="Диплом № 11"
+                  src="./images/review12.jpg"
+                  alt="Отзыв 12"
                 />
-                <p class="education__diploms-subtitle">
-                  ИПО (сертификация), Психология стресса
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education12.jpg"
-                  alt="Диплом № 12"
+                  src="./images/review13.jpg"
+                  alt="Отзыв 13"
                 />
-                <p class="education__diploms-subtitle">
-                  АКПП (сертификация), Инструменты логики для специалиста КПТ
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education13.png"
-                  alt="Диплом № 13"
+                  src="./images/review14.jpg"
+                  alt="Отзыв 14"
                 />
-                <p class="education__diploms-subtitle">
-                  Аттитюд+ФПК (сертификация), Психомер, практика супервизии.
-                  Теория и практика. Обучение в интегративной модели
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education14.png"
-                  alt="Диплом № 14"
+                  src="./images/review15.jpg"
+                  alt="Отзыв 15"
                 />
-                <p class="education__diploms-subtitle">
-                  Аттитюд+ФПК (сертификация), Психологические причины и
-                  профилактика неуспеваемости
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education15.png"
-                  alt="Диплом № 15"
+                  src="./images/review16.jpg"
+                  alt="Отзыв 16"
                 />
-                <p class="education__diploms-subtitle">
-                  Аттитюд+ФПК (сертификация), Краткосрочное и долгосрочное
-                  консультирование и прочие виды психологических техник
-                </p>
-              </div>
-            </div>
-            <div class="items3">
-              <div class="education__slide">
-                <img
-                  class="education__diploms-item"
-                  src="./images/education16.jpg"
-                  alt="Диплом № 16"
-                />
-                <p class="education__diploms-subtitle">
-                  АКПП (сертификация), Участник форма для специалистов КПТ
-                </p>
               </div>
               <div class="education__slide">
                 <img
                   class="education__diploms-item"
-                  src="./images/education17.jpg"
-                  alt="Диплом № 17"
+                  src="./images/review17.jpg"
+                  alt="Отзыв 17"
                 />
-                <p class="education__diploms-subtitle">
-                  IEA, (сертификация) Cross-National Comparative Surveys
-                  (Сравнительные исследования: модели и методы)
-                </p>
               </div>
-            </div>
-
-            <div class="items2">
-              <div class="education__slide">
-                <img
-                  class="education__diploms-item"
-                  src="./images/education18.jpg"
-                  alt="Диплом № 18"
-                />
-                <p
-                  class="education__diploms-subtitle education__diploms-item_size"
-                >
-                  Институт Психоанализа (сертификация), Психодрама. Испытание
-                  временем.
-                </p>
-              </div>
-              <div class="education__slide">
-                <img
-                  class="education__diploms-item"
-                  src="./images/education19.jpg"
-                  alt="Диплом № 19"
-                />
-                <p
-                  class="education__diploms-subtitle education__diploms-item_size"
-                >
-                  ЦДООП Метафора (сертификация), ПТСР как следствие детской
-                  травмы. Мультимодальный подход в работе с клиентами
-                  перенесшими насилие
-                </p>
-              </div>
-              <div class="education__slide">
-                <img
-                  class="education__diploms-item"
-                  src="./images/education20.jpg"
-                  alt="Диплом № 20"
-                />
-                <p
-                  class="education__diploms-subtitle education__diploms-item_size"
-                >
-                  ЦДООП Метафора (сертификация), Невроз и травма. Причины и
-                  психотерапия
-                </p>
-              </div>
-              <div class="education__slide">
-                <img
-                  class="education__diploms-item"
-                  src="./images/education21.jpg"
-                  alt="Диплом № 21"
-                />
-                <p
-                  class="education__diploms-subtitle education__diploms-item_size"
-                >
-                  ЦДООП Метафора (сертификация), Психологическая помощь в
-                  ситуации развода
-                </p>
-              </div>
-              <div class="education__slide">
-                <img
-                  class="education__diploms-item"
-                  src="./images/education22.jpg"
-                  alt="Диплом № 22"
-                />
-                <p
-                  class="education__diploms-subtitle education__diploms-item_size"
-                >
-                  ЦДООП Метафора (сертификация), Интегративная психотерапия
-                  неврозов и панических атак
-                </p>
-              </div>
-            </div>
           </div>
         </section>
       </main>
