--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
           <div class="info__video-img">
             <iframe
               class="info__video"
-              src="https://www.youtube.com/embed/FBQHdko5jsc?controls=0"
+              src="https://www.youtube.com/embed/c52cV2JLvK8?controls=0"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -314,7 +314,7 @@
 
           <div class="consultation__container-price-contract">
             <a
-              href="https://drive.google.com/file/d/1PFp52rJkam2Hzb_0Za5tpZWPzFCaNnL5/view?usp=sharing"
+              href="https://drive.google.com/file/d/1gV95OE9R8BVbGXUCztU5c6Z9v1ox9Mq8/view?usp=share_link"
               target="_blank"
               class="consultation__link consultation__link_margin"
               >Прайс на услуги</a
