--- a/src/reviews.html
+++ b/src/reviews.html
@@ -42,25 +42,11 @@
                 >
               </li>
               <li>
-                <a class="nav__link header__link" href="./index.html#situations"
-                  >Психологическая<br />
-                  помощь</a
-                >
-              </li>
-              <li>
                 <a
                   class="nav__link header__link"
                   href="./index.html#consultation"
                   >Психологические<br />
                   консультации</a
-                >
-              </li>
-              <li>
-                <a
-                  class="nav__link header__link"
-                  href="./index.html#consultation__check-list"
-                  >Чек-листы<br />
-                  и тесты</a
                 >
               </li>
               <li>
@@ -77,8 +63,13 @@
                 href="https://t.me/irdan_psy/"
                 class="button-reg education_btn_reg"
                 target="_blank"
-                >Записаться на консультацию
-              </a>
+                >До 15.07.24 прием не ведется</a
+              >
+              <p class="consultation__copyright footer__consultation_copyright">
+                * Во время консультаций, а так же в выходные дни, я не отвечаю
+                на звонки и сообщения.<br />Я отвечу Вам при первой
+                возможности.<br />Надеюсь на Ваше понимание!
+              </p>
               <h1 class="header__title header__education-title">
                 Психолог Ирина Дан
               </h1>
@@ -247,12 +238,19 @@
               </p>
             </div>
           </div>
-          <a
-            href="https://t.me/irdan_psy/"
-            class="button-reg button-reg__footer"
-            target="_blank"
-            >Записаться на консультацию</a
-          >
+          <div class="footer__button-container">
+            <a
+              href="https://t.me/irdan_psy/"
+              class="button-reg button-reg__footer"
+              target="_blank"
+              >Записаться на консультацию</a
+            >
+            <p class="consultation__copyright footer__consultation_copyright">
+              * Во время консультаций, а так же в выходные дни, я не отвечаю на
+              звонки и сообщения.<br />Я отвечу Вам при первой возможности.<br />Надеюсь
+              на Ваше понимание!
+            </p>
+          </div>
           <div class="footer__nav">
             <h3 class="footer__title">Социальные сети</h3>
             <nav class="footer__container-icon">
@@ -287,7 +285,7 @@
           </div>
         </div>
         <p class="footer__copyright">
-          &copy; 2023 сайт сделан by
+          &copy; 2024 сайт сделан by
           <a
             class="footer__copyright-link"
             href="https://t.me/kudnik"
