--- a/src/education.html
+++ b/src/education.html
@@ -42,25 +42,11 @@
                 >
               </li>
               <li>
-                <a class="nav__link header__link" href="./index.html#situations"
-                  >Психологическая<br />
-                  помощь</a
-                >
-              </li>
-              <li>
                 <a
                   class="nav__link header__link"
                   href="./index.html#consultation"
                   >Психологические<br />
                   консультации</a
-                >
-              </li>
-              <li>
-                <a
-                  class="nav__link header__link"
-                  href="./index.html#consultation__check-list"
-                  >Чек-листы<br />
-                  и тесты</a
                 >
               </li>
               <li>
@@ -77,8 +63,13 @@
                 href="https://t.me/irdan_psy/"
                 class="button-reg education_btn_reg"
                 target="_blank"
-                >Записаться на консультацию
-              </a>
+                >До 15.07.24 прием не ведется</a
+              >
+              <p class="consultation__copyright footer__consultation_copyright">
+                * Во время консультаций, а так же в выходные дни, я не отвечаю
+                на звонки и сообщения.<br />Я отвечу Вам при первой
+                возможности.<br />Надеюсь на Ваше понимание!
+              </p>
               <h1 class="header__title header__education-title">
                 Психолог Ирина Дан
               </h1>
@@ -192,7 +183,7 @@
                   alt="Диплом № 9"
                 />
                 <p class="education__diploms-subtitle">
-                  АКПП (сертификация), Терапия пустого усилия
+                  АКПП (повышение квалификации), Терапия пустого усилия
                 </p>
               </div>
               <div class="education__slide">
@@ -223,7 +214,8 @@
                   alt="Диплом № 12"
                 />
                 <p class="education__diploms-subtitle">
-                  АКПП (сертификация), Инструменты логики для специалиста КПТ
+                  АКПП (повышение квалификации), Инструменты логики для
+                  специалиста КПТ
                 </p>
               </div>
               <div class="education__slide">
@@ -268,7 +260,8 @@
                   alt="Диплом № 16"
                 />
                 <p class="education__diploms-subtitle">
-                  АКПП (сертификация), Участник форма для специалистов КПТ
+                  АКПП (повышение квалификации), Участник форума для
+                  специалистов КПТ
                 </p>
               </div>
               <div class="education__slide">
@@ -280,6 +273,32 @@
                 <p class="education__diploms-subtitle">
                   IEA, (сертификация) Cross-National Comparative Surveys
                   (Сравнительные исследования: модели и методы)
+                </p>
+              </div>
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education30.jpg"
+                  alt="Диплом № 30"
+                />
+                <p class="education__diploms-subtitle">
+                  Московский институт психоанализа (конференция), Дефектология в
+                  свете современных нейронаук: теоретические и практические
+                  аспекты
+                </p>
+              </div>
+            </div>
+
+            <div class="items3">
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education31.jpg"
+                  alt="Диплом № 31"
+                />
+                <p class="education__diploms-subtitle">
+                  АКПП (повышение квалификации), Как помочь людям в чьей семье и
+                  окружении есть человек с зависимостью
                 </p>
               </div>
             </div>
@@ -295,7 +314,7 @@
                   class="education__diploms-subtitle education__diploms-item_size"
                 >
                   Институт Психоанализа (сертификация), Психодрама. Испытание
-                  временем.
+                  временем
                 </p>
               </div>
               <div class="education__slide">
@@ -307,9 +326,22 @@
                 <p
                   class="education__diploms-subtitle education__diploms-item_size"
                 >
-                  ЦДООП Метафора (сертификация), ПТСР как следствие детской
-                  травмы. Мультимодальный подход в работе с клиентами
-                  перенесшими насилие
+                ЦДООП Метафора (сертификация), ПТСР как следствие детской
+                травмы. Мультимодальный подход в работе с клиентами
+                перенесшими насилие
+                </p>
+              </div>
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education24.jpg"
+                  alt="Диплом № 24"
+                />
+                <p
+                  class="education__diploms-subtitle education__diploms-item_size"
+                >
+                  ЦДООП Метафора (конференция), Работа психолога с кризисными
+                  состояниями, их последствиями и ретравматизацией
                 </p>
               </div>
               <div class="education__slide">
@@ -321,8 +353,21 @@
                 <p
                   class="education__diploms-subtitle education__diploms-item_size"
                 >
-                  ЦДООП Метафора (сертификация), Невроз и травма. Причины и
-                  психотерапия
+                ЦДООП Метафора (сертификация), Невроз и травма. Причины и
+                психотерапия
+                </p>
+              </div>
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education26.jpg"
+                  alt="Диплом № 26"
+                />
+                <p
+                  class="education__diploms-subtitle education__diploms-item_size"
+                >
+                  ЦДООП Метафора (конференция), Работа психолога со сложными
+                  эмоциональными переживаниями
                 </p>
               </div>
               <div class="education__slide">
@@ -334,8 +379,23 @@
                 <p
                   class="education__diploms-subtitle education__diploms-item_size"
                 >
-                  ЦДООП Метафора (сертификация), Психологическая помощь в
-                  ситуации развода
+                ЦДООП Метафора (сертификация), Психологическая помощь в
+                ситуации развода
+                </p>
+              </div>
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education27.jpg"
+                  alt="Диплом № 27"
+                />
+                <p
+                  class="education__diploms-subtitle education__diploms-item_size"
+                >
+                  Институт практической психологии «Иматон» (повышение
+                  квалификации), Травма и исцеление. Возможности позитивной
+                  психотерапии в работе со стрессом и последствиями
+                  психотравмирующих ситуаций
                 </p>
               </div>
               <div class="education__slide">
@@ -347,8 +407,61 @@
                 <p
                   class="education__diploms-subtitle education__diploms-item_size"
                 >
-                  ЦДООП Метафора (сертификация), Интегративная психотерапия
-                  неврозов и панических атак
+                ЦДООП Метафора (сертификация), Интегративная психотерапия
+                неврозов и панических атак
+                </p>
+              </div>
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education28.jpg"
+                  alt="Диплом № 28"
+                />
+                <p
+                  class="education__diploms-subtitle education__diploms-item_size"
+                >
+                  Институт практической психологии «Иматон» (повышение
+                  квалификации), Манипуляции и конфликты в повседневном и
+                  корпоративном контекстах
+                </p>
+              </div>
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education23.jpg"
+                  alt="Диплом № 23"
+                />
+                <p
+                  class="education__diploms-subtitle education__diploms-item_size"
+                >
+                  ЦДООП Метафора (сертификация), Работа с родительскими
+                  предписаниями в эмоционально-образной терапии
+                </p>
+              </div>
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education29.jpg"
+                  alt="Диплом № 29"
+                />
+                <p
+                  class="education__diploms-subtitle education__diploms-item_size"
+                >
+                  Московский институт психоанализа (конференция), Актуальные и
+                  перспективные вопросы развития суггестивной психологии
+                </p>
+              </div>
+              <div class="education__slide">
+                <img
+                  class="education__diploms-item"
+                  src="./images/education25.jpg"
+                  alt="Диплом № 25"
+                />
+                <p
+                  class="education__diploms-subtitle education__diploms-item_size"
+                >
+                  ЦДООП Метафора (сертификация), Незавершенная серпарация как
+                  причина психосоматики.
                 </p>
               </div>
             </div>
@@ -389,12 +502,19 @@
               </p>
             </div>
           </div>
-          <a
-            href="https://t.me/irdan_psy/"
-            class="button-reg button-reg__footer"
-            target="_blank"
-            >Записаться на консультацию</a
-          >
+          <div class="footer__button-container">
+            <a
+              href="https://t.me/irdan_psy/"
+              class="button-reg button-reg__footer"
+              target="_blank"
+              >Записаться на консультацию</a
+            >
+            <p class="consultation__copyright footer__consultation_copyright">
+              * Во время консультаций, а так же в выходные дни, я не отвечаю на
+              звонки и сообщения.<br />Я отвечу Вам при первой возможности.<br />Надеюсь
+              на Ваше понимание!
+            </p>
+          </div>
           <div class="footer__nav">
             <h3 class="footer__title">Социальные сети</h3>
             <nav class="footer__container-icon">
@@ -429,7 +549,7 @@
           </div>
         </div>
         <p class="footer__copyright">
-          &copy; 2023 сайт сделан by
+          &copy; 2024 сайт сделан by
           <a
             class="footer__copyright-link"
             href="https://t.me/kudnik"
