--- a/src/index.html
+++ b/src/index.html
@@ -43,23 +43,9 @@
                   >
                 </li>
                 <li>
-                  <a class="nav__link header__link" href="#situations"
-                    >Психологическая<br />
-                    помощь</a
-                  >
-                </li>
-                <li>
                   <a class="nav__link header__link" href="#consultation"
                     >Психологические<br />
                     консультации</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="nav__link header__link"
-                    href="#consultation__check-list"
-                    >Чек-листы<br />
-                    и тесты</a
                   >
                 </li>
                 <li>
@@ -71,10 +57,10 @@
               </ul>
             </section>
             <a href="https://t.me/irdan_psy/" class="button-reg" target="_blank"
-              >Записаться на консультацию
+              >До 15.07.24 прием не ведется
             </a>
             <h1 class="header__title">Психолог Ирина Дан</h1>
-            <p class="header__subtitle">Помогаю изменить жизнь к лучшему</p>
+            <p class="header__subtitle">&nbsp;</p>
           </div>
         </div>
       </header>
@@ -87,45 +73,28 @@
             </p>
             <p class="info__text">
               Я профессиональный психолог. Работаю в интегративном подходе и
-              специализируюсь <br />
-              в когнитивно-поведенческой психотерапии третьей волны.
+              специализируюсь<br />в когнитивно-поведенческой психотерапии
+              третьей волны.
             </p>
             <p class="info__text">
-              Я помогу вам в решении проблем, связанных с кризисами и
-              конфликтами в любовных и дружеских отношениях, общении с пожилыми
-              родителями, детьми и подростками.
-            </p>
-            <p class="info__text">
-              А так же если у вас наблюдается апатия, тревожность, панические
-              атаки, депрессия.
+              Мой нескончаемый интерес и хобби - новые подходы и открытия в
+              психологии и нейрофизиологии. Так же я веду свой канал на Ютуб.
+              Там вы можете найти много интересного из психологии и
+              психотерапии.
             </p>
             <p class="info__text">
               Если вы зашли на мой сайт, значит у вас возникла мысль обратиться
               за психологической помощью.
             </p>
-            <p class="info__text info__test_margin">
-              Навалился груз проблем и не знаете, как справляться?
-            </p>
             <p class="info__text">
-              Не откладывайте. Не ждите, когда этот ком вас накроет!
-            </p>
-            <p class="info__text">
-              Чем раньше вы начнете делать шаги по изменению свой жизни, тем
-              быстрее и дольше она будет дарить вам радость и удовольствие!
+              Записывайтесь ко мне на консультацию, и мы обсудим возникшие у вас
+              трудности.
             </p>
           </div>
           <div class="info__video-img">
             <iframe
               class="info__video"
-              src="https://www.youtube.com/embed/c52cV2JLvK8?controls=0"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="info__video"
-              src="https://www.youtube.com/embed/lljeSXNnGkU?controls=0"
+              src="https://www.youtube.com/embed/OesDVPYSMFw?controls=0"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -133,188 +102,36 @@
             ></iframe>
             <iframe
               class="info__video close"
-              src="https://www.youtube.com/embed/B6ZMCdu6anc?controls=0"
+              src="https://www.youtube.com/embed/R41rRiKeiM4?controls=0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="info__video"
+              src="https://www.youtube.com/embed/QW_nld1-4dI?controls=0"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
           </div>
-          <nav class="info__nav">
-            <a class="info__icon" href="https://t.me/irdan_psy/" target="_blank"
-              ><img src="./images/Telegram_64px.png" alt="Telegram"
-            /></a>
-            <a
-              class="info__icon"
-              href="https://vt.tiktok.com/ZSdyPUQHV/"
-              target="_blank"
-              ><img src="./images/tikTok_64px.png" alt="Tik-Tok"
-            /></a>
-            <a
-              class="info__icon"
-              href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
-              target="_blank"
-              ><img src="./images/YouTube_64px.png" alt="YouTube"
-            /></a>
-          </nav>
-        </section>
-        <section class="situations" id="situations">
-          <div class="situations__item">
-            <h3 class="situations__title">
-              Апатия, тревожность, депрессивные состояния
-            </h3>
-            <p class="situations__subtitle">
-              Найти и устранить симптомы, исцелиться, пройти психологическую
-              реабилитацию
-            </p>
-            <img
-              src="./images/situations_1.png"
-              alt="Головной мозг иконки от Smashicons - Flaticon"
-              class="situations__icon"
-            />
-          </div>
-          <div class="situations__item">
-            <h3 class="situations__title">
-              Отношения взрослых детей с пожилыми родителями
-            </h3>
-            <p class="situations__subtitle">
-              Сепарация от родителей, отстаивание своих психологических границ
-            </p>
-            <img
-              src="./images/situations_2.png"
-              alt="Иконка от Freepik - Flaticon"
-              class="situations__icon"
-            />
-          </div>
-          <div class="situations__item">
-            <h3 class="situations__title">Семейная психология</h3>
-            <p class="situations__subtitle">
-              Созависимость, супружеская жизнь и семейные кризисы,
-              психологические проблемы семьи, угасание чувств
-            </p>
-            <img
-              src="./images/situations_3.png"
-              alt="Иконка от justicon - Flaticon"
-              class="situations__icon"
-            />
-          </div>
-          <div class="situations__item">
-            <h3 class="situations__title">Выстраивание отношений с детьми</h3>
-            <p class="situations__subtitle">
-              Понимание истоков психологии развития и поведения детей.
-              Налаживание отношений с детьми и подростками в семье
-            </p>
-            <img
-              src="./images/situations_4.png"
-              alt="Иконка от Freepik - Flaticon"
-              class="situations__icon"
-            />
-          </div>
-          <div class="situations__item">
-            <h3 class="situations__title">Самооценка, уверенность</h3>
-            <p class="situations__subtitle">
-              Начать выстраивать новою жизнь, карьеру, повысить самооценку и
-              приступить к самореализации. Почуствовать, что жизнь прекрасна
-            </p>
-            <img
-              src="./images/situations_5.png"
-              alt="Иконка от Freepik - Flaticon"
-              class="situations__icon"
-            />
-          </div>
-          <div class="situations__item">
-            <h3 class="situations__title">Страхи, панические атаки</h3>
-            <p class="situations__subtitle">
-              Найти источник и причины страхов и фобий, перестать бояться и
-              начать двигаться вперед
-            </p>
-            <img
-              src="./images/situations_6.png"
-              alt="Иконка от Freepik - Flaticon"
-              class="situations__icon"
-            />
-          </div>
         </section>
         <section class="consultation" id="consultation">
-          <h2 class="consultation__title">
-            Психологическое консультирование онлайн
-          </h2>
-          <p class="consultation__text">
-            Сейчас мир очень интенсивно меняется, а вместе с ним меняются и наши
-            потребности. Пандемия и мобильность внесли коррективы в работу
-            психолога и клиента, выведя консультирование в онлайн формат, тем
-            самым в некоторых аспектах значительно облегчив коммуникацию.
-          </p>
-          <p class="consultation__text">
-            Вот лишь некоторые плюсы онлайн-формата:
-          </p>
-          <ul class="consultation__text-list">
-            <li>
-              Можно получить консультацию психолога, не поднимаясь со своего
-              стула. Это особенно важно для людей с ограниченной подвижностью,
-              или мам с грудными малышами.
-            </li>
-            <li>
-              Можно получить консультацию психолога, даже находясь за тысячи
-              километров от него – достаточно иметь интернет-соединение,
-              веб-камеру, и программу для связи. Это особенно важно для часто
-              переезжающих людей или жителей небольших городов, где просто нет
-              психологов-консультантов хорошего уровня.
-            </li>
-            <li>
-              Можно общаться с психологом, находясь в привычной комфортной
-              обстановке.
-            </li>
-            <li>
-              Можно не тратить время на дорогу, а использовать его на иные
-              полезные дела.
-            </li>
-          </ul>
-          <p class="consultation__text consultation__margin">
-            При всём этом качество работы сохраняется, результаты достигаются.
-          </p>
-          <div class="consultation__table">
-            <div class="consultation__table-item">
-              <p>
-                ИНДИВИДУАЛЬНОЕ КОНСУЛЬТИРОВАНИЕ И НЕМЕДИЦИНСКАЯ ПСИХОТЕРАПИЯ
-              </p>
-            </div>
-            <div class="consultation__table-item">
-              <p>
-                СЕМЕЙНОЕ И ПАРНОЕ КОНСУЛЬТИРОВАНИЕ И НЕМЕДИЦИНСКАЯ ПСИХОТЕРАПИЯ
-              </p>
-            </div>
-            <div class="consultation__table-item">
-              <p>ИНДИВИДУАЛЬНАЯ КОНСУЛЬТАЦИЯ ПО ВОПРОСАМ ДЕТСТКОЙ ПСИХОЛОГИИ</p>
-            </div>
-            <div class="consultation__table-item">
-              <p>
-                ПСИХОЛОГИЧЕСКОЕ ТЕСТИРОВАНИЕ И ДИАГНОСТИКА ВЗРОСЛЫХ И ПОДРОСТКОВ
-              </p>
-            </div>
-            <div class="consultation__table-item">
-              <p>
-                ГРУППОВАЯ РАБОТА (группы психологической поддержки и
-                психотерапевтические группы)
-              </p>
-            </div>
-            <div class="consultation__table-item">
-              <p>
-                СЕАНСЫ ТЕЛЕСНО-ОРИЕНТИРОВАННОЙ ПСИХОТЕРАПИИ (проводятся только
-                очно в зависимости от локации моего нахождения)
-              </p>
-            </div>
-          </div>
-
           <div class="reviews">
             <a href="./reviews.html" class="button-reg-reviews"
               >Отзывы и результаты</a
             >
           </div>
-
+          <div class="reviews-education">
+            <a href="./education.html" class="button-reg-reviews"
+              >Образование и квалификация</a
+            >
+          </div>
           <div class="consultation__container-price-contract">
             <a
-              href="https://drive.google.com/file/d/1gV95OE9R8BVbGXUCztU5c6Z9v1ox9Mq8/view?usp=share_link"
+              href="https://drive.google.com/file/d/1RqYjQiuqh-ykf0GuWw9GikAGotP4Ck-l/view?usp=sharing"
               target="_blank"
               class="consultation__link consultation__link_margin"
               >Прайс на услуги</a
@@ -346,21 +163,18 @@
                 <p class="hidden">
                   Надвигающуюся хандру, тоску или депрессивное состояние
                   (немедицинской этиологии) можно преодолеть только конкретными
-                  действиями. <br />
-                  Если у Вас медицинская (клиническая) депрессия – вы уже
-                  несколько месяцев: не встаёте с кровати, у вас
-                  непрекращающаяся беспричинная апатия, не хочется мыться,
+                  действиями.<br />Если у Вас медицинская (клиническая)
+                  депрессия – вы уже несколько месяцев: не встаёте с кровати, у
+                  вас непрекращающаяся беспричинная апатия, не хочется мыться,
                   чистить зубы, выходить из дома и т.д - ВАМ НЕОБХОДИМА ПОМОЩЬ
-                  МЕДИЦИНСКОГО ПСИХОТЕРАПЕВТА! <br />
-                  Если тоскливое состояние начало накатывать относительно
-                  недавно, случается время от времени, связана с какими-то
-                  событиями (расставание, неудача на работе, ссора с подругой,
-                  не достигнута цель и пр.) - то этот ЧЕК-ЛИСТ поможет вам
-                  выбраться из хандры. <br />
-                  Делаем это каждый день! <br />
-                  Не пропуская, не оправдываясь, не халтуря! <br />
-                  Можете начать в любое время дня и ночи. <br />
-                  Если начнете с утра, уже к вечеру почувствуете, что депрессия
+                  МЕДИЦИНСКОГО ПСИХОТЕРАПЕВТА!<br />Если тоскливое состояние
+                  начало накатывать относительно недавно, случается время от
+                  времени, связана с какими-то событиями (расставание, неудача
+                  на работе, ссора с подругой, не достигнута цель и пр.) - то
+                  этот ЧЕК-ЛИСТ поможет вам выбраться из хандры.<br />Делаем это
+                  каждый день!<br />Не пропуская, не оправдываясь, не
+                  халтуря!<br />Можете начать в любое время дня и ночи.<br />Если
+                  начнете с утра, уже к вечеру почувствуете, что депрессия
                   отступает!
                 </p>
               </div>
@@ -448,12 +262,19 @@
               </p>
             </div>
           </div>
-          <a
-            href="https://t.me/irdan_psy/"
-            class="button-reg button-reg__footer"
-            target="_blank"
-            >Записаться на консультацию</a
-          >
+          <div class="footer__button-container">
+            <a
+              href="https://t.me/irdan_psy/"
+              class="button-reg button-reg__footer"
+              target="_blank"
+              >Записаться на консультацию</a
+            >
+            <p class="consultation__copyright footer__consultation_copyright">
+              * Во время консультаций, а так же в выходные дни, я не отвечаю на
+              звонки и сообщения.<br />Я отвечу Вам при первой возможности.<br />Надеюсь
+              на Ваше понимание!
+            </p>
+          </div>
           <div class="footer__nav">
             <h3 class="footer__title">Социальные сети</h3>
             <nav class="footer__container-icon">
@@ -488,7 +309,7 @@
           </div>
         </div>
         <p class="footer__copyright">
-          &copy; 2023 сайт сделан by
+          &copy; 2024 сайт сделан by
           <a
             class="footer__copyright-link"
             href="https://t.me/kudnik"
