--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,18 @@
                 </li>
               </ul>
             </section>
+            <p class="header_text">
+              Уважаемые клиенты и гости моего сайта и канала!</br>Аккаунт в Телеграм, привязанный к предыдущему номеру телефона, я отключила и он более
+              работать не будет.</br>Всех постоянных клиентов я оповестила лично. Если мы с Вами работали значительно раньше, уведомление до Вас могдо не дойти. Если Вы написали мне
+              сообщение, на которое не получили ответ, я приношу свои извинения и прошу Вас
+              продублировать его в новый чат со мной в Телеграм. Название аккаунта осталось прежним
+              <a href="https://t.me/irdan_psy/" target="_blank" class="header_text_link"
+              >@Irdan_psy
+            </a></br>
+              С любовью и уважением, Ваш психолог Ирина Дан.
+            </p>
             <a href="https://t.me/irdan_psy/" class="button-reg" target="_blank"
-              >До 15.07.24 прием не ведется
+              >Записаться на консультацию
             </a>
             <h1 class="header__title">Психолог Ирина Дан</h1>
             <p class="header__subtitle">&nbsp;</p>
