--- a/src/reviews.html
+++ b/src/reviews.html
@@ -59,11 +59,12 @@
           </section>
           <div class="header__education-container">
             <div class="header__education-container-info">
+             
               <a
                 href="https://t.me/irdan_psy/"
                 class="button-reg education_btn_reg"
                 target="_blank"
-                >До 15.07.24 прием не ведется</a
+                >Записаться на консультацию</a
               >
               <p class="consultation__copyright footer__consultation_copyright">
                 * Во время консультаций, а так же в выходные дни, я не отвечаю
