--- a/src/education.html
+++ b/src/education.html
@@ -63,7 +63,7 @@
                 href="https://t.me/irdan_psy/"
                 class="button-reg education_btn_reg"
                 target="_blank"
-                >До 15.07.24 прием не ведется</a
+                >Записаться на консультацию</a
               >
               <p class="consultation__copyright footer__consultation_copyright">
                 * Во время консультаций, а так же в выходные дни, я не отвечаю
