add: new social media

--- a/src/index.html
+++ b/src/index.html
@@ -57,9 +57,8 @@
               </ul>
             </section>
             <p class="header_text">
-              Уважаемые клиенты и гости моего сайта и канала!</br>Аккаунт в Телеграм, привязанный к предыдущему номеру телефона, я отключила и он более
-              работать не будет.</br>Всех постоянных клиентов я оповестила лично. Если мы с Вами работали значительно раньше, уведомление до Вас могдо не дойти. Если Вы написали мне
-              сообщение, на которое не получили ответ, я приношу свои извинения и прошу Вас
+              Уважаемые клиенты и гости моего сайта и канала!</br>Аккаунт в Телеграм, привязанный к предыдущему номеру телефона, более не 
+              работает вы можете видеть его как "удаленный".</br>Если вы писали мне сообщение в удаленный аккаунт, на которое не получили ответ, я прошу вас
               продублировать его в новый чат со мной в Телеграм. Название аккаунта осталось прежним
               <a href="https://t.me/irdan_psy/" target="_blank" class="header_text_link"
               >@Irdan_psy
@@ -240,20 +239,6 @@
       </main>
       <footer class="footer" id="footer">
         <div class="footer__container">
-          <div>
-            <h3 class="footer__title">Контакты</h3>
-            <div class="footer__items">
-              <p class="footer__item">
-                Telegram:
-                <a
-                  class="footer__item-link"
-                  href="https://t.me/irdan_psy"
-                  target="_blank"
-                  >@irdan_psy</a
-                >
-              </p>
-            </div>
-          </div>
           <div class="footer__button-container">
             <a
               href="https://t.me/irdan_psy/"
@@ -272,9 +257,15 @@
             <nav class="footer__container-icon">
               <a
                 class="footer__icon"
-                href="https://www.linkedin.com/in/irdan-psy/"
+                href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
                 target="_blank"
-                ><img src="./images/linkedin_32px.png" alt="Linkedin"
+                ><img src="./images/YouTube_32px.png" alt="YouTube"
+              /></a>
+              <a
+                class="footer__icon"
+                href="https://t.me/irdan_online1"
+                target="_blank"
+                ><img src="./images/telegram_32px.png" alt="Telegram"
               /></a>
               <a
                 class="footer__icon"
@@ -284,9 +275,9 @@
               /></a>
               <a
                 class="footer__icon"
-                href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
+                href="https://www.instagram.com/irdan_psy/"
                 target="_blank"
-                ><img src="./images/YouTube_32px.png" alt="YouTube"
+                ><img src="./images/Instagram_32px.png" alt="Instagram"
               /></a>
               <a
                 class="footer__icon"
