--- a/src/reviews.html
+++ b/src/reviews.html
@@ -207,20 +207,6 @@
       </main>
       <footer class="footer" id="footer">
         <div class="footer__container">
-          <div>
-            <h3 class="footer__title">Контакты</h3>
-            <div class="footer__items">
-              <p class="footer__item">
-                Telegram:
-                <a
-                  class="footer__item-link"
-                  href="https://t.me/irdan_psy"
-                  target="_blank"
-                  >@irdan_psy</a
-                >
-              </p>
-            </div>
-          </div>
           <div class="footer__button-container">
             <a
               href="https://t.me/irdan_psy/"
@@ -239,9 +225,15 @@
             <nav class="footer__container-icon">
               <a
                 class="footer__icon"
-                href="https://www.linkedin.com/in/irdan-psy/"
+                href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
                 target="_blank"
-                ><img src="./images/linkedin_32px.png" alt="Linkedin"
+                ><img src="./images/YouTube_32px.png" alt="YouTube"
+              /></a>
+              <a
+                class="footer__icon"
+                href="https://t.me/irdan_online1"
+                target="_blank"
+                ><img src="./images/telegram_32px.png" alt="Telegram"
               /></a>
               <a
                 class="footer__icon"
@@ -251,9 +243,9 @@
               /></a>
               <a
                 class="footer__icon"
-                href="https://www.youtube.com/channel/UCmuan8nmML-u91NEgtevegg/"
+                href="https://www.instagram.com/irdan_psy/"
                 target="_blank"
-                ><img src="./images/YouTube_32px.png" alt="YouTube"
+                ><img src="./images/Instagram_32px.png" alt="Instagram"
               /></a>
               <a
                 class="footer__icon"
